@@ -3,6 +3,7 @@ Changes in JMurmel-1.4.3 relative to JMurmel-1.4.2
 
  * removed get-internal-cpu-time
  * added random, make-random-state, random-state-p
+ * defun and defmacro now accept (and ignore) optional docstrings
 
 
 Changes in JMurmel-1.4.2 relative to JMurmel-1.4.1
